--- a/index.html
+++ b/index.html
@@ -5,32 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <article class="container">
+    <header class="article-picture">
+      <img src="images/drawers.jpg" alt="picture of green drawers with frames and a vase on top"></img>
+    </header>
+    <section class="preview">
+      <h2 class="title">Shift the overall look and feel by adding these wonderful
+      touches to furniture in your home</h2>
+      <p class="content">Ever been in a room and felt like something was missing? Perhaps
+      it felt slightly bare and uninviting. I’ve got some simple tips
+      to help you make any room feel complete.</p>
+      <footer class="contact">
+        <div class="author-avatar">
+          <img src="images/avatar-michelle.jpg" alt="picture of the author"></img>
+        </div>
+        <div class="author-info">
+          <h3 class="author-name">Michelle Appleton</h3>
+          <p class="date">28 Jun 2020</p>
+        </div>
+        <div class="share">Share</div>
+      </footer>
+    </section>
+  </article>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
 
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
+</div>
 
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/gcardenasdev/article-preview-component">Gabriela C</a>.
   </div>
+
 </body>
 </html>
