small markup and layout changes. Finished styling the share button

--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
           <img src="images/avatar-michelle.jpg" alt="picture of the author"></img>
         </div>
         <div class="author-info">
-          <h3 class="author-name">Michelle Appleton</h3>
+          <p class="author-name">Michelle Appleton</p>
           <p class="date">28 Jun 2020</p>
         </div>
-        <div class="share">Share</div>
+        <div class="share">
+          <img src="images/icon-share.svg" alt="Share"></img>
+        </div>
       </footer>
     </section>
   </article>
