Updated some acessibility issues in the html

--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
+  <title>Frontend Mentor | Article Preview Component</title>
 </head>
 <body>
   <article class="article_container">
-    <header class="article_picture">
+    <header class="article_picture" role="banner">
       <img src="images/drawers.jpg" alt="picture of green drawers with frames and a vase on top"></img>
     </header>
-    <section class="article_preview">
-      <h2 class="article_title">Shift the overall look and feel by adding these wonderful
+    <section class="article_preview" role="main">
+      <h1 class="article_title">Shift the overall look and feel by adding these wonderful
       touches to furniture in your home</h2>
       <p class="article_content">Ever been in a room and felt like something was missing? Perhaps
       it felt slightly bare and uninviting. I’ve got some simple tips
       to help you make any room feel complete.</p>
-      <section class="article_contact">
+      <div class="article_contact" role="contentinfo">
         <div class="article_author-avatar">
           <img src="images/avatar-michelle.jpg" alt="picture of the author"></img>
         </div>
@@ -32,7 +33,7 @@
         <div id="desktop" class="share-icon" >
           <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path class="" id="path" fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg>
         </div>
-        <section class="share--popup hide">
+        <div class="share--popup hide">
           <p>SHARE</p>
           <a href="https://www.facebook.com/" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path fill="#FFF" d="M18.896 0H1.104C.494 0 0 .494 0 1.104v17.793C0 19.506.494 20 1.104 20h9.58v-7.745H8.076V9.237h2.606V7.01c0-2.583 1.578-3.99 3.883-3.99 1.104 0 2.052.082 2.329.119v2.7h-1.598c-1.254 0-1.496.597-1.496 1.47v1.928h2.989l-.39 3.018h-2.6V20h5.098c.608 0 1.102-.494 1.102-1.104V1.104C20 .494 19.506 0 18.896 0z"/></svg></a>
           <a href="https://www.twitter.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="17"><path fill="#FFF" d="M20 2.172a8.192 8.192 0 01-2.357.646 4.11 4.11 0 001.804-2.27 8.22 8.22 0 01-2.605.996A4.096 4.096 0 0013.847.248c-2.65 0-4.596 2.472-3.998 5.037A11.648 11.648 0 011.392 1a4.109 4.109 0 001.27 5.478 4.086 4.086 0 01-1.858-.513c-.045 1.9 1.318 3.679 3.291 4.075a4.113 4.113 0 01-1.853.07 4.106 4.106 0 003.833 2.849A8.25 8.25 0 010 14.658a11.616 11.616 0 006.29 1.843c7.618 0 11.922-6.434 11.663-12.205A8.354 8.354 0 0020 2.172z"/></svg></a>
@@ -40,10 +41,8 @@
          <div id="mobile" class="share-icon  icon_bg--dark" > 
           <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path class="" fill="#FFF" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg>
         </div>
-        </section>
-      </section>
+      </div>
     </section>
-    
   </article>
 
 
