changes to html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <article class="article_container">
-    <header class="article_picture" role="banner">
+    <header class="article_picture">
       <img src="images/drawers.jpg" alt="picture of green drawers with frames and a vase on top"></img>
     </header>
     <section class="article_preview" role="main">
@@ -22,7 +22,7 @@
       <p class="article_content">Ever been in a room and felt like something was missing? Perhaps
       it felt slightly bare and uninviting. I’ve got some simple tips
       to help you make any room feel complete.</p>
-      <div class="article_contact" role="contentinfo">
+      <div class="article_contact">
         <div class="article_author-avatar">
           <img src="images/avatar-michelle.jpg" alt="picture of the author"></img>
         </div>
